# scrapr

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release-dry-run.yml  release.yml
src/: main.rs  scrap.rs
