[package]
name = "scrapr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# config
dotenvy = "0.15.7"
# log
tracing = "0.1.37"
reqwest = { version = "0.12.4", features = ["gzip"] }
# Json
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
# error
anyhow = "1.0.75"
thiserror = "1.0.47"
# validation
validator = { version = "0.18.1", features = [ "derive"] }
url = "2.5.0"
# parsing
webpage = { version = "2.0.1", default-features = false, features = ["serde"] }
clap = { version = "4.4.0", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
